# ase-assignment-Yuqian-He

./: .gitignore  README.md  classDesign
PBDGUI/: CMakeLists.txt  README.md  main.cpp
PBDGUI/include/: Constrain.h  DistanceConstrain.h  NGLScene.h  ParticleGenerator.h  SimulationSolver.h  mainwindow.h
PBDGUI/shaders/: ParticleFragment.glsl  ParticleVertex.glsl
PBDGUI/src/: DistanceConstrain.cpp  NGLScene.cpp  ParticleGenerator.cpp  mainwindow.cpp
PBDGUI/ui/: mainwindow.ui
PBDNGL/: .gitignore  CMakeLists.txt  README.md  desk.abc
PBDNGL/include/: CollisionConstrain.h  Constrain.h  Generator.h  NGLScene.h  Particle.h  ParticleGenerator.h  SimulationSolver.h
PBDNGL/shaders/: ParticleVertex.glsl
PBDNGL/src/: CollisionConstrain.cpp  Constrain.cpp  DistanceConstrain.cpp  Generator.cpp  NGLScene.cpp  ParticleGenerator.cpp  SimulationSolver.cpp
PBDNGL/test/: ConstrainTest.cpp  ParticleTest.cpp
assets/: distance constriant
